--- a/Password Manager/AutoFillExtension/MainInterface.storyboard
+++ b/Password Manager/AutoFillExtension/MainInterface.storyboard
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xki-Si-B7m">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xki-Si-B7m">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,13 +17,13 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="2Kf-l0-fwq">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="W0o-Si-jty">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Updating QuickType data..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACy-PN-teX">
-                                            <rect key="frame" x="103.5" y="19.5" width="207.5" height="21"/>
+                                            <rect key="frame" x="104" y="19.5" width="206.5" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -39,21 +37,21 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="TmS-TF-Mss" detailTextLabel="fvq-ZG-f1y" style="IBUITableViewCellStyleSubtitle" id="cap-4p-mKO">
-                                        <rect key="frame" x="0.0" y="115.5" width="414" height="44"/>
+                                        <rect key="frame" x="0.0" y="115.5" width="414" height="55.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cap-4p-mKO" id="g9C-MT-RMq">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TmS-TF-Mss">
-                                                    <rect key="frame" x="20" y="5" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="20" y="10" width="33" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fvq-ZG-f1y">
-                                                    <rect key="frame" x="20" y="25.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="20" y="31.5" width="44" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -85,31 +83,18 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9C0-5q-cx9" customClass="ExtendedNavigationBar" customModule="AutoFillExtension" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GAQ-Qf-oxl">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <blurEffect style="extraLight"/>
-                            </visualEffectView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ky8-vK-JVj"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="9C0-5q-cx9" secondAttribute="trailing" id="8T9-dX-KHT"/>
-                            <constraint firstItem="9C0-5q-cx9" firstAttribute="top" secondItem="BuU-Ak-iZz" secondAttribute="top" id="DRn-RR-UrU"/>
                             <constraint firstItem="Ygf-Oi-jBV" firstAttribute="top" secondItem="Ky8-vK-JVj" secondAttribute="top" id="ECh-kR-dxc"/>
                             <constraint firstItem="Ygf-Oi-jBV" firstAttribute="leading" secondItem="Ky8-vK-JVj" secondAttribute="leading" id="H6B-tX-ll3"/>
                             <constraint firstItem="Ky8-vK-JVj" firstAttribute="trailing" secondItem="2Kf-l0-fwq" secondAttribute="trailing" id="JFp-Fp-OkM"/>
                             <constraint firstItem="Ygf-Oi-jBV" firstAttribute="trailing" secondItem="Ky8-vK-JVj" secondAttribute="trailing" id="QPy-A3-02l"/>
-                            <constraint firstItem="9C0-5q-cx9" firstAttribute="leading" secondItem="BuU-Ak-iZz" secondAttribute="leading" id="dzI-oZ-rmo"/>
-                            <constraint firstItem="Ygf-Oi-jBV" firstAttribute="top" secondItem="9C0-5q-cx9" secondAttribute="bottom" id="g5Z-xp-sni"/>
                             <constraint firstItem="2Kf-l0-fwq" firstAttribute="leading" secondItem="Ky8-vK-JVj" secondAttribute="leading" id="hFI-CL-pi3"/>
                             <constraint firstItem="2Kf-l0-fwq" firstAttribute="top" secondItem="Ygf-Oi-jBV" secondAttribute="bottom" id="kJB-3l-U1P"/>
                             <constraint firstAttribute="bottom" secondItem="2Kf-l0-fwq" secondAttribute="bottom" id="ojO-TU-7Yl"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Ky8-vK-JVj"/>
                     </view>
                     <connections>
                         <outlet property="cancelButtonItem" destination="WZf-M5-4a7" id="VUZ-2a-gss"/>
@@ -149,22 +134,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="dBa-pM-77I">
-                                <rect key="frame" x="88" y="188" width="238" height="171"/>
+                                <rect key="frame" x="88" y="188" width="238" height="176"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter passcode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Z8-UU-zOn">
-                                        <rect key="frame" x="59.5" y="0.0" width="119" height="20.5"/>
+                                        <rect key="frame" x="60" y="0.0" width="118.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="○○○○" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="luP-aq-8Cn" customClass="PasscodeField" customModule="AutoFillExtension" customModuleProvider="target">
-                                        <rect key="frame" x="45" y="40.5" width="148" height="50"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="33.5" y="40.5" width="171" height="55"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="38"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3ba-mg-Rhl">
-                                        <rect key="frame" x="0.0" y="110.5" width="238" height="60.5"/>
+                                        <rect key="frame" x="0.0" y="115.5" width="238" height="60.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Failed Passcode Attempts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6DA-Oa-ToK">
                                                 <rect key="frame" x="10" y="0.0" width="218" height="60.5"/>
@@ -184,12 +168,12 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="G6a-eN-4hD"/>
+                        <color key="backgroundColor" systemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="dBa-pM-77I" firstAttribute="centerX" secondItem="eZh-6R-Qe7" secondAttribute="centerX" id="5hJ-Z4-YHh"/>
                             <constraint firstItem="dBa-pM-77I" firstAttribute="top" secondItem="G6a-eN-4hD" secondAttribute="top" constant="100" id="SM5-yX-b11"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="G6a-eN-4hD"/>
                     </view>
                     <navigationItem key="navigationItem" title="Passwords" id="7WD-bL-FuE">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="IUV-Tl-iwD">
@@ -208,4 +192,12 @@
             <point key="canvasLocation" x="970" y="-702"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="groupTableViewBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
